# esp-idf-24c

./: CMakeLists.txt  Makefile  README.md
components/at24c/: CMakeLists.txt  Kconfig.projbuild  at24c.c  at24c.h  at24c_legacy.c  at24c_new.c
main/: CMakeLists.txt  Kconfig.projbuild  at24c.c  at24c.h  main.c
